parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> line
Rule 1     line -> Input line
Rule 2     line -> EXIT empty
Rule 3     Input -> Declaration
Rule 4     Input -> Expression
Rule 5     Input -> If_Statement
Rule 6     Input -> While_Loop
Rule 7     Input -> For_Loop
Rule 8     Input -> Do_While_Loop
Rule 9     Input -> Print_Console
Rule 10    Declaration -> DeclarationTypeNumber IDENTIFIER_ALL ;
Rule 11    Declaration -> DeclarationTypeNumber ARRAY_MULTI_ASSIGN ;
Rule 12    Declaration -> STRING IDENTIFIER ;
Rule 13    Declaration -> STRING STRING_ASSIGN ;
Rule 14    DeclarationTypeNumber -> INT
Rule 15    DeclarationTypeNumber -> INT16
Rule 16    IDENTIFIER_ASSIGN -> IDENTIFIER = OperationConstant
Rule 17    STRING_ASSIGN -> IDENTIFIER = DQ_MSG
Rule 18    IDENTIFIER_ARRAY -> IDENTIFIER [ ARRAY_SIZE ]
Rule 19    ARRAY_MULTI_ASSIGN -> IDENTIFIER [ ] = { MULTI_ASSIGN }
Rule 20    MULTI_ASSIGN -> CONSTANT , MULTI_ASSIGN
Rule 21    MULTI_ASSIGN -> CONSTANT empty
Rule 22    ARRAY_SIZE -> IDENTIFIER
Rule 23    ARRAY_SIZE -> OperationConstant
Rule 24    OperationConstant -> OperationStatement
Rule 25    OperationConstant -> OperationStatementInBracket
Rule 26    OperationConstant -> MinusVariable
Rule 27    OperationConstant -> CONSTANT_ALL
Rule 28    OperationConstant -> IDENTIFIER_ID
Rule 29    OperationStatementInBracket -> ( OperationStatement )
Rule 30    OperationStatement -> OperationConstant + OperationConstant
Rule 31    OperationStatement -> OperationConstant - OperationConstant
Rule 32    OperationStatement -> OperationConstant * OperationConstant
Rule 33    OperationStatement -> OperationConstant / OperationConstant
Rule 34    OperationStatement -> OperationConstant % OperationConstant
Rule 35    MinusVariable -> OperationVarDeclare OperationConstant
Rule 36    IDENTIFIER_ALL -> IDENTIFIER_ASSIGN
Rule 37    IDENTIFIER_ALL -> IDENTIFIER_ARRAY
Rule 38    IDENTIFIER_ALL -> IDENTIFIER
Rule 39    IDENTIFIER_ID -> IDENTIFIER_ARRAY
Rule 40    IDENTIFIER_ID -> IDENTIFIER
Rule 41    CONSTANT_ALL -> CONSTANT
Rule 42    CONSTANT_ALL -> IDENTIFIER
Rule 43    CONSTANT -> CONSTANT10
Rule 44    CONSTANT -> CONSTANT16
Rule 45    INC_DEC_OPRERATOR -> INC_OP
Rule 46    INC_DEC_OPRERATOR -> DEC_OP
Rule 47    OperationVarDeclare -> +
Rule 48    OperationVarDeclare -> -
Rule 49    Expression -> IDENTIFIER_ID = OperationConstant ;
Rule 50    Expression -> IDENTIFIER_ID = DQ_MSG ;
Rule 51    Expression -> ARRAY_MULTI_ASSIGN empty ;
Rule 52    Expression -> IDENTIFIER_ID INC_DEC_OPRERATOR ;
Rule 53    Expression -> INC_DEC_OPRERATOR IDENTIFIER_ID ;
Rule 54    If_Statement -> IF ( Compare_Expreession ) { statements } Elif_Else
Rule 55    Elif_Statement -> ELIF ( Compare_Expreession ) { statements } Elif_Else
Rule 56    Else_Statement -> ELSE { statements }
Rule 57    statements -> empty empty
Rule 58    statements -> Declaration statements
Rule 59    statements -> Expression statements
Rule 60    statements -> If_Statement statements
Rule 61    statements -> While_Loop statements
Rule 62    statements -> For_Loop statements
Rule 63    statements -> Do_While_Loop statements
Rule 64    statements -> Print_Console statements
Rule 65    Elif_Else -> empty
Rule 66    Elif_Else -> Elif_Statement
Rule 67    Elif_Else -> Else_Statement
Rule 68    Compare_Expreession -> OperationConstant Compare_Operator OperationConstant
Rule 69    Compare_Operator -> L_OP
Rule 70    Compare_Operator -> G_OP
Rule 71    Compare_Operator -> LE_OP
Rule 72    Compare_Operator -> GE_OP
Rule 73    Compare_Operator -> EQ_OP
Rule 74    Compare_Operator -> NE_OP
Rule 75    While_Loop -> WHILE ( Compare_Expreession ) { statements }
Rule 76    For_Loop -> FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
Rule 77    For_Loop -> FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
Rule 78    For_Loop -> FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
Rule 79    For_Loop -> FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
Rule 80    IDENTIFIER_ALL_ASSIGN -> IDENTIFIER_ID = OperationConstant
Rule 81    For_Loop_Crement -> IDENTIFIER INC_DEC_OPRERATOR
Rule 82    For_Loop_Crement -> INC_DEC_OPRERATOR IDENTIFIER
Rule 83    Do_While_Loop -> DO { statements } WHILE ( Compare_Expreession ) ;
Rule 84    Print_Console -> PRINT ( DQ_MSG ) ;
Rule 85    Print_Console -> PRINT ( DQ_MSG Print_Value ) ;
Rule 86    Print_Console -> PRINT_LN ( DQ_MSG ) ;
Rule 87    Print_Console -> PRINT_LN ( DQ_MSG Print_Value ) ;
Rule 88    Print_Console -> PRINT_LN ( empty empty ) ;
Rule 89    Print_Value -> empty empty empty
Rule 90    Print_Value -> , IDENTIFIER_ALL Print_Value
Rule 91    Print_Value -> , CONSTANT Print_Value
Rule 92    Print_Value -> , DQ_MSG Print_Value
Rule 93    empty -> <empty>
Rule 94    EXIT -> <empty>

Terminals, with rules where they appear

%                    : 34
(                    : 29 54 55 75 76 77 78 79 83 84 85 86 87 88
)                    : 29 54 55 75 76 77 78 79 83 84 85 86 87 88
*                    : 32
+                    : 30 47
,                    : 20 90 91 92
-                    : 31 48
/                    : 33
;                    : 10 11 12 13 49 50 51 52 53 76 76 77 77 78 78 79 79 83 84 85 86 87 88
=                    : 16 17 19 49 50 76 77 78 79 80
CONSTANT10           : 43
CONSTANT16           : 44
DEC_OP               : 46
DO                   : 83
DQ_MSG               : 17 50 84 85 86 87 92
ELIF                 : 55
ELSE                 : 56
EQ_OP                : 73
FOR                  : 76 77 78 79
GE_OP                : 72
G_OP                 : 70
IDENTIFIER           : 12 16 17 18 19 22 38 40 42 76 77 78 79 81 82
IF                   : 54
INC_OP               : 45
INT                  : 14
INT16                : 15
LE_OP                : 71
L_OP                 : 69
NE_OP                : 74
PRINT                : 84 85
PRINT_LN             : 86 87 88
STRING               : 12 13
WHILE                : 75 83
[                    : 18 19
]                    : 18 19
error                : 
{                    : 19 54 55 56 75 76 77 78 79 83
}                    : 19 54 55 56 75 76 77 78 79 83

Nonterminals, with rules where they appear

ARRAY_MULTI_ASSIGN   : 11 51
ARRAY_SIZE           : 18
CONSTANT             : 20 21 41 91
CONSTANT_ALL         : 27
Compare_Expreession  : 54 55 75 76 77 78 79 83
Compare_Operator     : 68
Declaration          : 3 58
DeclarationTypeNumber : 10 11 76 77
Do_While_Loop        : 8 63
EXIT                 : 2
Elif_Else            : 54 55
Elif_Statement       : 66
Else_Statement       : 67
Expression           : 4 59
For_Loop             : 7 62
For_Loop_Crement     : 77 79
IDENTIFIER_ALL       : 10 90
IDENTIFIER_ALL_ASSIGN : 76 78
IDENTIFIER_ARRAY     : 37 39
IDENTIFIER_ASSIGN    : 36
IDENTIFIER_ID        : 28 49 50 52 53 80
INC_DEC_OPRERATOR    : 52 53 81 82
If_Statement         : 5 60
Input                : 1
MULTI_ASSIGN         : 19 20
MinusVariable        : 26
OperationConstant    : 16 23 30 30 31 31 32 32 33 33 34 34 35 49 68 68 76 77 78 79 80
OperationStatement   : 24 29
OperationStatementInBracket : 25
OperationVarDeclare  : 35
Print_Console        : 9 64
Print_Value          : 85 87 90 91 92
STRING_ASSIGN        : 13
While_Loop           : 6 61
empty                : 2 21 51 57 57 65 88 88 89 89 89
line                 : 1 0
statements           : 54 55 56 58 59 60 61 62 63 64 75 76 77 78 79 83

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . Input line
    (2) line -> . EXIT empty
    (3) Input -> . Declaration
    (4) Input -> . Expression
    (5) Input -> . If_Statement
    (6) Input -> . While_Loop
    (7) Input -> . For_Loop
    (8) Input -> . Do_While_Loop
    (9) Input -> . Print_Console
    (94) EXIT -> .
    (10) Declaration -> . DeclarationTypeNumber IDENTIFIER_ALL ;
    (11) Declaration -> . DeclarationTypeNumber ARRAY_MULTI_ASSIGN ;
    (12) Declaration -> . STRING IDENTIFIER ;
    (13) Declaration -> . STRING STRING_ASSIGN ;
    (49) Expression -> . IDENTIFIER_ID = OperationConstant ;
    (50) Expression -> . IDENTIFIER_ID = DQ_MSG ;
    (51) Expression -> . ARRAY_MULTI_ASSIGN empty ;
    (52) Expression -> . IDENTIFIER_ID INC_DEC_OPRERATOR ;
    (53) Expression -> . INC_DEC_OPRERATOR IDENTIFIER_ID ;
    (54) If_Statement -> . IF ( Compare_Expreession ) { statements } Elif_Else
    (75) While_Loop -> . WHILE ( Compare_Expreession ) { statements }
    (76) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (77) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (78) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (79) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (83) Do_While_Loop -> . DO { statements } WHILE ( Compare_Expreession ) ;
    (84) Print_Console -> . PRINT ( DQ_MSG ) ;
    (85) Print_Console -> . PRINT ( DQ_MSG Print_Value ) ;
    (86) Print_Console -> . PRINT_LN ( DQ_MSG ) ;
    (87) Print_Console -> . PRINT_LN ( DQ_MSG Print_Value ) ;
    (88) Print_Console -> . PRINT_LN ( empty empty ) ;
    (14) DeclarationTypeNumber -> . INT
    (15) DeclarationTypeNumber -> . INT16
    (39) IDENTIFIER_ID -> . IDENTIFIER_ARRAY
    (40) IDENTIFIER_ID -> . IDENTIFIER
    (19) ARRAY_MULTI_ASSIGN -> . IDENTIFIER [ ] = { MULTI_ASSIGN }
    (45) INC_DEC_OPRERATOR -> . INC_OP
    (46) INC_DEC_OPRERATOR -> . DEC_OP
    (18) IDENTIFIER_ARRAY -> . IDENTIFIER [ ARRAY_SIZE ]

    $end            reduce using rule 94 (EXIT -> .)
    STRING          shift and go to state 13
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    PRINT           shift and go to state 21
    PRINT_LN        shift and go to state 22
    INT             shift and go to state 23
    INT16           shift and go to state 24
    IDENTIFIER      shift and go to state 14
    INC_OP          shift and go to state 26
    DEC_OP          shift and go to state 27

    line                           shift and go to state 1
    Input                          shift and go to state 2
    EXIT                           shift and go to state 3
    Declaration                    shift and go to state 4
    Expression                     shift and go to state 5
    If_Statement                   shift and go to state 6
    While_Loop                     shift and go to state 7
    For_Loop                       shift and go to state 8
    Do_While_Loop                  shift and go to state 9
    Print_Console                  shift and go to state 10
    DeclarationTypeNumber          shift and go to state 11
    ARRAY_MULTI_ASSIGN             shift and go to state 12
    IDENTIFIER_ID                  shift and go to state 15
    INC_DEC_OPRERATOR              shift and go to state 16
    IDENTIFIER_ARRAY               shift and go to state 25

state 1

    (0) S' -> line .



state 2

    (1) line -> Input . line
    (1) line -> . Input line
    (2) line -> . EXIT empty
    (3) Input -> . Declaration
    (4) Input -> . Expression
    (5) Input -> . If_Statement
    (6) Input -> . While_Loop
    (7) Input -> . For_Loop
    (8) Input -> . Do_While_Loop
    (9) Input -> . Print_Console
    (94) EXIT -> .
    (10) Declaration -> . DeclarationTypeNumber IDENTIFIER_ALL ;
    (11) Declaration -> . DeclarationTypeNumber ARRAY_MULTI_ASSIGN ;
    (12) Declaration -> . STRING IDENTIFIER ;
    (13) Declaration -> . STRING STRING_ASSIGN ;
    (49) Expression -> . IDENTIFIER_ID = OperationConstant ;
    (50) Expression -> . IDENTIFIER_ID = DQ_MSG ;
    (51) Expression -> . ARRAY_MULTI_ASSIGN empty ;
    (52) Expression -> . IDENTIFIER_ID INC_DEC_OPRERATOR ;
    (53) Expression -> . INC_DEC_OPRERATOR IDENTIFIER_ID ;
    (54) If_Statement -> . IF ( Compare_Expreession ) { statements } Elif_Else
    (75) While_Loop -> . WHILE ( Compare_Expreession ) { statements }
    (76) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (77) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (78) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (79) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (83) Do_While_Loop -> . DO { statements } WHILE ( Compare_Expreession ) ;
    (84) Print_Console -> . PRINT ( DQ_MSG ) ;
    (85) Print_Console -> . PRINT ( DQ_MSG Print_Value ) ;
    (86) Print_Console -> . PRINT_LN ( DQ_MSG ) ;
    (87) Print_Console -> . PRINT_LN ( DQ_MSG Print_Value ) ;
    (88) Print_Console -> . PRINT_LN ( empty empty ) ;
    (14) DeclarationTypeNumber -> . INT
    (15) DeclarationTypeNumber -> . INT16
    (39) IDENTIFIER_ID -> . IDENTIFIER_ARRAY
    (40) IDENTIFIER_ID -> . IDENTIFIER
    (19) ARRAY_MULTI_ASSIGN -> . IDENTIFIER [ ] = { MULTI_ASSIGN }
    (45) INC_DEC_OPRERATOR -> . INC_OP
    (46) INC_DEC_OPRERATOR -> . DEC_OP
    (18) IDENTIFIER_ARRAY -> . IDENTIFIER [ ARRAY_SIZE ]

    $end            reduce using rule 94 (EXIT -> .)
    STRING          shift and go to state 13
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    PRINT           shift and go to state 21
    PRINT_LN        shift and go to state 22
    INT             shift and go to state 23
    INT16           shift and go to state 24
    IDENTIFIER      shift and go to state 14
    INC_OP          shift and go to state 26
    DEC_OP          shift and go to state 27

    Input                          shift and go to state 2
    line                           shift and go to state 28
    EXIT                           shift and go to state 3
    Declaration                    shift and go to state 4
    Expression                     shift and go to state 5
    If_Statement                   shift and go to state 6
    While_Loop                     shift and go to state 7
    For_Loop                       shift and go to state 8
    Do_While_Loop                  shift and go to state 9
    Print_Console                  shift and go to state 10
    DeclarationTypeNumber          shift and go to state 11
    ARRAY_MULTI_ASSIGN             shift and go to state 12
    IDENTIFIER_ID                  shift and go to state 15
    INC_DEC_OPRERATOR              shift and go to state 16
    IDENTIFIER_ARRAY               shift and go to state 25

state 3

    (2) line -> EXIT . empty
    (93) empty -> .

    $end            reduce using rule 93 (empty -> .)

    empty                          shift and go to state 29

state 4

    (3) Input -> Declaration .

    STRING          reduce using rule 3 (Input -> Declaration .)
    IF              reduce using rule 3 (Input -> Declaration .)
    WHILE           reduce using rule 3 (Input -> Declaration .)
    FOR             reduce using rule 3 (Input -> Declaration .)
    DO              reduce using rule 3 (Input -> Declaration .)
    PRINT           reduce using rule 3 (Input -> Declaration .)
    PRINT_LN        reduce using rule 3 (Input -> Declaration .)
    INT             reduce using rule 3 (Input -> Declaration .)
    INT16           reduce using rule 3 (Input -> Declaration .)
    IDENTIFIER      reduce using rule 3 (Input -> Declaration .)
    INC_OP          reduce using rule 3 (Input -> Declaration .)
    DEC_OP          reduce using rule 3 (Input -> Declaration .)
    $end            reduce using rule 3 (Input -> Declaration .)


state 5

    (4) Input -> Expression .

    STRING          reduce using rule 4 (Input -> Expression .)
    IF              reduce using rule 4 (Input -> Expression .)
    WHILE           reduce using rule 4 (Input -> Expression .)
    FOR             reduce using rule 4 (Input -> Expression .)
    DO              reduce using rule 4 (Input -> Expression .)
    PRINT           reduce using rule 4 (Input -> Expression .)
    PRINT_LN        reduce using rule 4 (Input -> Expression .)
    INT             reduce using rule 4 (Input -> Expression .)
    INT16           reduce using rule 4 (Input -> Expression .)
    IDENTIFIER      reduce using rule 4 (Input -> Expression .)
    INC_OP          reduce using rule 4 (Input -> Expression .)
    DEC_OP          reduce using rule 4 (Input -> Expression .)
    $end            reduce using rule 4 (Input -> Expression .)


state 6

    (5) Input -> If_Statement .

    STRING          reduce using rule 5 (Input -> If_Statement .)
    IF              reduce using rule 5 (Input -> If_Statement .)
    WHILE           reduce using rule 5 (Input -> If_Statement .)
    FOR             reduce using rule 5 (Input -> If_Statement .)
    DO              reduce using rule 5 (Input -> If_Statement .)
    PRINT           reduce using rule 5 (Input -> If_Statement .)
    PRINT_LN        reduce using rule 5 (Input -> If_Statement .)
    INT             reduce using rule 5 (Input -> If_Statement .)
    INT16           reduce using rule 5 (Input -> If_Statement .)
    IDENTIFIER      reduce using rule 5 (Input -> If_Statement .)
    INC_OP          reduce using rule 5 (Input -> If_Statement .)
    DEC_OP          reduce using rule 5 (Input -> If_Statement .)
    $end            reduce using rule 5 (Input -> If_Statement .)


state 7

    (6) Input -> While_Loop .

    STRING          reduce using rule 6 (Input -> While_Loop .)
    IF              reduce using rule 6 (Input -> While_Loop .)
    WHILE           reduce using rule 6 (Input -> While_Loop .)
    FOR             reduce using rule 6 (Input -> While_Loop .)
    DO              reduce using rule 6 (Input -> While_Loop .)
    PRINT           reduce using rule 6 (Input -> While_Loop .)
    PRINT_LN        reduce using rule 6 (Input -> While_Loop .)
    INT             reduce using rule 6 (Input -> While_Loop .)
    INT16           reduce using rule 6 (Input -> While_Loop .)
    IDENTIFIER      reduce using rule 6 (Input -> While_Loop .)
    INC_OP          reduce using rule 6 (Input -> While_Loop .)
    DEC_OP          reduce using rule 6 (Input -> While_Loop .)
    $end            reduce using rule 6 (Input -> While_Loop .)


state 8

    (7) Input -> For_Loop .

    STRING          reduce using rule 7 (Input -> For_Loop .)
    IF              reduce using rule 7 (Input -> For_Loop .)
    WHILE           reduce using rule 7 (Input -> For_Loop .)
    FOR             reduce using rule 7 (Input -> For_Loop .)
    DO              reduce using rule 7 (Input -> For_Loop .)
    PRINT           reduce using rule 7 (Input -> For_Loop .)
    PRINT_LN        reduce using rule 7 (Input -> For_Loop .)
    INT             reduce using rule 7 (Input -> For_Loop .)
    INT16           reduce using rule 7 (Input -> For_Loop .)
    IDENTIFIER      reduce using rule 7 (Input -> For_Loop .)
    INC_OP          reduce using rule 7 (Input -> For_Loop .)
    DEC_OP          reduce using rule 7 (Input -> For_Loop .)
    $end            reduce using rule 7 (Input -> For_Loop .)


state 9

    (8) Input -> Do_While_Loop .

    STRING          reduce using rule 8 (Input -> Do_While_Loop .)
    IF              reduce using rule 8 (Input -> Do_While_Loop .)
    WHILE           reduce using rule 8 (Input -> Do_While_Loop .)
    FOR             reduce using rule 8 (Input -> Do_While_Loop .)
    DO              reduce using rule 8 (Input -> Do_While_Loop .)
    PRINT           reduce using rule 8 (Input -> Do_While_Loop .)
    PRINT_LN        reduce using rule 8 (Input -> Do_While_Loop .)
    INT             reduce using rule 8 (Input -> Do_While_Loop .)
    INT16           reduce using rule 8 (Input -> Do_While_Loop .)
    IDENTIFIER      reduce using rule 8 (Input -> Do_While_Loop .)
    INC_OP          reduce using rule 8 (Input -> Do_While_Loop .)
    DEC_OP          reduce using rule 8 (Input -> Do_While_Loop .)
    $end            reduce using rule 8 (Input -> Do_While_Loop .)


state 10

    (9) Input -> Print_Console .

    STRING          reduce using rule 9 (Input -> Print_Console .)
    IF              reduce using rule 9 (Input -> Print_Console .)
    WHILE           reduce using rule 9 (Input -> Print_Console .)
    FOR             reduce using rule 9 (Input -> Print_Console .)
    DO              reduce using rule 9 (Input -> Print_Console .)
    PRINT           reduce using rule 9 (Input -> Print_Console .)
    PRINT_LN        reduce using rule 9 (Input -> Print_Console .)
    INT             reduce using rule 9 (Input -> Print_Console .)
    INT16           reduce using rule 9 (Input -> Print_Console .)
    IDENTIFIER      reduce using rule 9 (Input -> Print_Console .)
    INC_OP          reduce using rule 9 (Input -> Print_Console .)
    DEC_OP          reduce using rule 9 (Input -> Print_Console .)
    $end            reduce using rule 9 (Input -> Print_Console .)


state 11
